Add final newline to `devcontainer.json`, and make sure it stays.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,6 +32,7 @@
                     88
                 ],
                 "editor.tabSize": 4,
+                "files.insertFinalNewline": true,
                 // Python tooling:
                 "black-formatter.importStrategy": "fromEnvironment",
                 "flake8.args": [
