--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -73,6 +73,22 @@ repos:
     -   id: fix-encoding-pragma
         args: [--remove]
     -   id: trailing-whitespace
+-   repo: https://github.com/cpplint/cpplint
+    rev: 1.6.1
+    hooks:
+    -   id: cpplint
+        exclude: |
+            ^pandas/_libs/include/pandas/vendored/klib
+            |pandas/_libs/include/pandas/vendored/nanoarrow.h
+            |pandas/_libs/src/vendored/nanoarrow.c
+        args: [
+            --quiet,
+            '--extensions=c,h',
+            '--headers=h',
+            --recursive,
+            --linelength=88,
+            '--filter=-readability/casting,-runtime/int,-build/include_subdir,-readability/fn_size'
+        ]
 -   repo: https://github.com/pylint-dev/pylint
     rev: v3.0.0a6
     hooks:
