--- a/ci/deps/actions-311-numpydev.yaml
+++ b/ci/deps/actions-311-numpydev.yaml
@@ -8,6 +8,7 @@ dependencies:
   - versioneer[toml]
   - meson[ninja]=1.0.1
   - meson-python=0.13.1
+  - cython>=0.29.33
 
   # test dependencies
   - pytest>=7.3.2
