--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -173,7 +173,7 @@ jobs:
           python -c `'import pandas as pd; pd.test(extra_args=[\"`\"--no-strict-data-files`\"\", \"`\"-m not clipboard and not single_cpu and not slow and not network and not db`\"\"])`';
           "@
           # add rc to the end of the image name if the Python version is unreleased
-          docker pull python:${{ matrix.python[1] }}-${{ matrix.python[1] == '3.12' && 'rc-' || '' }}
+          docker pull python:${{ matrix.python[1] }}-${{ matrix.python[1] == '3.12' && 'rc' || '' }}
           docker run --env PANDAS_CI='1' -v ${PWD}:C:\pandas python:${{ matrix.python[1] }}-windowsservercore powershell -Command $TST_CMD
 
       - uses: actions/upload-artifact@v3
