--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -169,8 +169,7 @@ jobs:
         run: |
           $TST_CMD = @"
           python -m pip install hypothesis>=6.46.1 pytest>=7.3.2 pytest-xdist>=2.2.0 pytest-asyncio>=0.17;
-          pwd;
-          python -m pip install $(Get-Item pandas\wheelhouse\*.whl);
+          python -m pip install `$(Get-Item pandas\wheelhouse\*.whl);
           python -c `'import pandas as pd; pd.test(extra_args=[\"`\"--no-strict-data-files`\"\", \"`\"-m not clipboard and not single_cpu and not slow and not network and not db`\"\"])`';
           "@
           # add rc to the end of the image name if the Python version is unreleased
