--- a/.github/workflows/pip-dev.yml
+++ b/.github/workflows/pip-dev.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12-dev"]
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
@@ -30,4 +30,4 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
