--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -159,6 +159,8 @@ jobs:
       uses: ./.github/actions/build_pandas
       env:
         CFLAGS: "$CFLAGS -fno-sanitize-recover=all"
+      with:
+        sanitize: true
 
     - name: Test (not single_cpu)
       uses: ./.github/actions/run-tests
