try removing sanitize

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -160,7 +160,7 @@ jobs:
       env:
         CFLAGS: "$CFLAGS -fno-sanitize-recover=all"
       with:
-        sanitize: true
+        sanitize: false
 
     - name: Test (not single_cpu)
       uses: ./.github/actions/run-tests
