--- a/.github/actions/build_pandas/action.yml
+++ b/.github/actions/build_pandas/action.yml
@@ -29,7 +29,7 @@ runs:
       run: |
         if [[ ${{ inputs.editable }} == "true" ]]; then
           if [[ ${{ inputs.sanitize }} == "true" ]]; then
-            CFLAGS=$CFLAGS -fno-sanitize-recover=all \
+            CFLAGS="$CFLAGS -fno-sanitize-recover=all" \
               pip install -e . --no-build-isolation -v  \
               --config-settings=setup-args="-Db_sanitize=address,undefined"
           else
@@ -37,7 +37,7 @@ runs:
           fi
         else
           if [[ ${{ inputs.sanitize }} == "true" ]]; then
-            CFLAGS=$CFLAGS -fno-sanitize-recover=all \
+            CFLAGS="$CFLAGS -fno-sanitize-recover=all" \
               pip install . --no-build-isolation -v \
               --config-settings=setup-args="-Db_sanitize=address,undefined"
           else
