--- a/.github/actions/run-tests/action.yml
+++ b/.github/actions/run-tests/action.yml
@@ -1,9 +1,20 @@
 name: Run tests and report results
+inputs:
+  sanitize:
+    description: Whether sanitizers should be used or not
+    default: false
 runs:
   using: composite
   steps:
     - name: Test
-      run: ci/run_tests.sh
+      run: |
+        if [[ ${{ inputs.sanitize }} == "true" ]]; then
+          ASAN_OPTIONS=detect_leaks=0 \
+            LD_PRELOAD=$(gcc -print-file-name=libasan.so) \
+            ci/run_tests.sh
+        else
+          ci/run_tests.sh
+        fi
       shell: bash -el {0}
 
     - name: Publish test results
