DEPS: remove duplicated dependency in requirement-dev.txt (#55101)
* Test installing dev dependencies with pip

* fix typo

* remove 3.12, list deps

* remove pip ci test

--- a/environment.yml
+++ b/environment.yml
@@ -106,7 +106,7 @@ dependencies:
   - ipykernel
 
   # web
-  - jinja2  # in optional dependencies, but documented here as needed
+  # - jinja2  # already listed in optional dependencies, but documented here for reference
   - markdown
   - feedparser
   - pyyaml
