try bumping meson

--- a/.github/actions/setup-conda/action.yml
+++ b/.github/actions/setup-conda/action.yml
@@ -12,5 +12,5 @@ runs:
         environment-file: ${{ inputs.environment-file }}
         environment-name: test
         condarc-file: ci/condarc.yml
-        cache-environment: false
-        cache-downloads: false
+        cache-environment: true
+        cache-downloads: true
