--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -156,7 +156,7 @@ repos:
     -   id: clang-format
         name: clang-format
         entry: clang-format
-        language: system
+        language: conda
         files: ^pandas/_libs/src|^pandas/_libs/include
         args: [-i]
         types_or: [c, c++]
