Add env markers for pytables. Allow env markers, rename and version remaps to the same package.

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -35,7 +35,7 @@ psycopg2-binary>=2.9.3
 pyarrow>=7.0.0
 pymysql>=1.0.2
 pyreadstat>=1.1.5
-tables>=3.7.0
+tables>=3.7.0 ; sys_platform != 'darwin' and platform_machine != 'arm64'
 python-calamine>=0.1.6
 pyxlsb>=1.0.9
 s3fs>=2022.05.0
