BUILD: Fix duplicate files warning

--- a/pandas/_libs/window/meson.build
+++ b/pandas/_libs/window/meson.build
@@ -16,3 +16,15 @@ py.extension_module(
     subdir: 'pandas/_libs/window',
     install: true
 )
+
+sources_to_install = [
+    'aggregations.pyi',
+    'indexers.pyi'
+]
+
+foreach source: sources_to_install
+    py.install_sources(
+        source,
+        subdir: 'pandas/_libs/window'
+    )
+endforeach
