--- a/ci/deps/actions-311-downstream_compat.yaml
+++ b/ci/deps/actions-311-downstream_compat.yaml
@@ -25,6 +25,8 @@ dependencies:
   - pytz
 
   # optional dependencies
+  - adbc-driver-postgresql>=0.7.0
+  - adbc-driver-sqlite>=0.7.0
   - beautifulsoup4>=4.11.1
   - blosc>=1.21.0
   - bottleneck>=1.3.4
@@ -72,8 +74,6 @@ dependencies:
   - pyyaml
   - py
   - pip:
-    - adbc_driver_postgresql>=0.6.0
-    - adbc_driver_sqlite>=0.6.0
     - dataframe-api-compat>=0.1.7
     - pyqt5>=5.15.6
     - tzdata>=2022.1
