--- a/ci/deps/actions-39.yaml
+++ b/ci/deps/actions-39.yaml
@@ -24,6 +24,8 @@ dependencies:
   - pytz
 
   # optional dependencies
+  - adbc-driver-postgresql>=0.7.0
+  - adbc-driver-sqlite>=0.7.0
   - beautifulsoup4>=4.11.1
   - blosc>=1.21.0
   - bottleneck>=1.3.4
@@ -58,7 +60,5 @@ dependencies:
   - zstandard>=0.17.0
 
   - pip:
-    - adbc_driver_postgresql>=0.6.0
-    - adbc_driver_sqlite>=0.6.0
     - pyqt5>=5.15.6
     - tzdata>=2022.1
