--- a/environment.yml
+++ b/environment.yml
@@ -25,8 +25,8 @@ dependencies:
   - pytz
 
   # optional dependencies
-  - adbc_driver_postgresql>=0.6.0
-  - adbc_driver_sqlite>=0.6.0
+  - adbc-driver-postgresql>=0.7.0
+  - adbc-driver-sqlite>=0.7.0
   - beautifulsoup4>=4.11.1
   - blosc
   - bottleneck>=1.3.4
