--- a/.github/workflows/broken-linkcheck.yml
+++ b/.github/workflows/broken-linkcheck.yml
@@ -17,6 +17,12 @@ jobs:
           uses: actions/checkout@v4
           with:
                 fetch-depth: 0
+               
+        - name: Set up Conda
+          uses: ./.github/actions/setup-conda
+
+        - name: Build Pandas
+          uses: ./.github/actions/build_pandas
 
         - name: Setup Python
           id: setup_python
