--- a/.github/workflows/broken-linkcheck.yml
+++ b/.github/workflows/broken-linkcheck.yml
@@ -11,6 +11,9 @@ on:
 jobs:
     linkcheck:
         runs-on: ubuntu-latest
+        defaults:
+          run:
+                shell: bash -el {0}
 
         steps:
         - name: Checkout
