--- a/.github/workflows/broken-linkcheck.yml
+++ b/.github/workflows/broken-linkcheck.yml
@@ -34,4 +34,4 @@ jobs:
         - name: Display broken links
           if: failure()
           working-directory: ./doc
-          run: grep broken linkcheck.txt
+          run: grep -i broken linkcheck.txt
