--- a/.github/workflows/broken-linkcheck.yml
+++ b/.github/workflows/broken-linkcheck.yml
@@ -30,8 +30,8 @@ jobs:
         - name: Run linkcheck script
           working-directory: ./doc
           run: python make.py linkcheck | tee linkcheck.txt
-          
+
         - name: Display broken links
           if: failure()
           working-directory: ./doc
-          run: grep -i broken linkcheck.txt
+          run: linkcheck.txt grep -i broken
