--- a/.github/workflows/broken-linkcheck.yml
+++ b/.github/workflows/broken-linkcheck.yml
@@ -29,7 +29,10 @@ jobs:
 
         - name: Run linkcheck script
           working-directory: ./doc
-          run: python make.py linkcheck | tee linkcheck.txt
+          shell: bash
+          run: |
+            set -o pipefail
+            python make.py linkcheck | tee linkcheck.txt
 
         - name: Display broken links
           if: failure()
