--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -13,10 +13,10 @@ tasks:
       mkdir -p .vscode
       cp gitpod/settings.json .vscode/settings.json
       git fetch --tags
-      python -m pip install -ve . --no-build-isolation --config-settings editable-verbose=true
+      python -m pip install -ve . --config-settings editable-verbose=true
       pre-commit install
     command: |
-      python -m pip install -ve . --no-build-isolation --config-settings editable-verbose=true
+      python -m pip install -ve . --config-settings editable-verbose=true
       echo "✨ Pre-build complete! You can close this terminal ✨ "
 
 # --------------------------------------------------------
