--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -13,9 +13,11 @@ tasks:
       mkdir -p .vscode
       cp gitpod/settings.json .vscode/settings.json
       git fetch --tags
+      pip install --upgrade meson
       python -m pip install -ve . --config-settings editable-verbose=true
       pre-commit install
     command: |
+      pip install --upgrade meson
       python -m pip install -ve . --config-settings editable-verbose=true
       echo "✨ Pre-build complete! You can close this terminal ✨ "
 
