--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,11 +14,11 @@ tasks:
       cp gitpod/settings.json .vscode/settings.json
       git fetch --tags
       pip install --upgrade meson
-      python -m pip install -ve . --config-settings editable-verbose=true
+      python -m pip install -ve . --no-build-isolation --config-settings editable-verbose=true
       pre-commit install
     command: |
       pip install --upgrade meson
-      python -m pip install -ve . --config-settings editable-verbose=true
+      python -m pip install -ve . --no-build-isolation --config-settings editable-verbose=true
       echo "✨ Pre-build complete! You can close this terminal ✨ "
 
 # --------------------------------------------------------
