--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -7,23 +7,23 @@
 
 	// Use 'settings' to set *default* container specific settings.json values on container create.
 	// You can edit these settings after create using File > Preferences > Settings > Remote.
-	"settings": {
-		"terminal.integrated.shell.linux": "/bin/bash",
-		"python.pythonPath": "/usr/local/bin/python",
-		"python.formatting.provider": "black",
-		"python.linting.enabled": true,
-		"python.linting.flake8Enabled": true,
-		"python.linting.pylintEnabled": false,
-		"python.linting.mypyEnabled": true,
-		"python.testing.pytestEnabled": true,
-		"python.testing.pytestArgs": [
-			"pandas"
-		]
-	},
-
-	// Add the IDs of extensions you want installed when the container is created in the array below.
-	"extensions": [
-		"ms-python.python",
-		"ms-vscode.cpptools"
-	]
+	"customizations": {
+		"vscode": {
+			"terminal.integrated.shell.linux": "/bin/bash",
+			"python.pythonPath": "/usr/local/bin/python",
+			"python.formatting.provider": "black",
+			"python.linting.enabled": true,
+			"python.linting.flake8Enabled": true,
+			"python.linting.pylintEnabled": false,
+			"python.linting.mypyEnabled": true,
+			"python.testing.pytestEnabled": true,
+			"python.testing.pytestArgs": [
+				"pandas"
+			],
+			"extensions": [
+				"ms-python.python",
+				"ms-vscode.cpptools"
+			]
+		}
+	}
 }
