--- a/ci/deps/actions-39-minimum_versions.yaml
+++ b/ci/deps/actions-39-minimum_versions.yaml
@@ -26,8 +26,6 @@ dependencies:
   - pytz=2020.1
 
   # optional dependencies
-  - adbc-driver-postgresql=0.7.0
-  - adbc-driver-sqlite=0.7.0
   - beautifulsoup4=4.11.1
   - blosc=1.21.0
   - bottleneck=1.3.4
@@ -62,6 +60,8 @@ dependencies:
   - zstandard=0.17.0
 
   - pip:
+    - adbc-driver-postgresql==0.7.0
+    - adbc-driver-sqlite==0.7.0
     - dataframe-api-compat==0.1.7
     - pyqt5==5.15.6
     - tzdata==2022.1
