--- a/ci/deps/circle-310-arm64.yaml
+++ b/ci/deps/circle-310-arm64.yaml
@@ -24,8 +24,6 @@ dependencies:
   - pytz
 
   # optional dependencies
-  - adbc-driver-postgresql>=0.7.0
-  - adbc-driver-sqlite>=0.7.0
   - beautifulsoup4>=4.11.1
   - blosc>=1.21.0
   - bottleneck>=1.3.4
@@ -59,3 +57,7 @@ dependencies:
   - xlrd>=2.0.1
   - xlsxwriter>=3.0.3
   - zstandard>=0.17.0
+
+  - pip:
+    - adbc-driver-postgresql>=0.7.0
+    - adbc-driver-sqlite>=0.7.0
